[gd_scene load_steps=8 format=3 uid="uid://dfk6hb06v0nq1"]

[ext_resource type="Script" path="res://script/belong_to_boss/asteroid.gd" id="1_sh0vp"]
[ext_resource type="Texture2D" uid="uid://8pahutdnnxy0" path="res://assets/boss/meteor sheet.png" id="2_p54cy"]
[ext_resource type="AudioStream" uid="uid://c7p6rmhs5bxy3" path="res://assets/sfx/hitHurt_balls.wav" id="3_o2apf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ghg4k"]
atlas = ExtResource("2_p54cy")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve7uw"]
atlas = ExtResource("2_p54cy")
region = Rect2(96, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_1vl8h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghg4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve7uw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7fvr4"]
radius = 19.0

[node name="Area2D" type="Area2D" groups=["obstacle"]]
script = ExtResource("1_sh0vp")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(10, -10)
texture = ExtResource("2_p54cy")
hframes = 2
vframes = 2

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.499999, -0.5)
scale = Vector2(0.95, 0.75)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1vl8h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9, 10)
shape = SubResource("CircleShape2D_7fvr4")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_o2apf")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
